[package]
name = "game"
version = "0.1.0"
description = "Game Engine - Manages game state, predictions, and eliminations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(anchor_debug)"] }

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }
vault = { path = "../vault", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"