[package]
name = "oracle"
version = "0.1.0"
description = "Oracle Adapter - Fetches and validates Pyth price feeds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(anchor_debug)"] }

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"