[package]
name = "vault"
version = "0.1.0"
description = "Vault & Treasury - Handles SOL deposits and DEGEN token minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(anchor_debug)"] }

[dependencies]
anchor-lang = {version = "0.32.1", features=["init-if-needed"]}
anchor-spl = { version = "0.32.1", features = ["token"] }

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"